--- a/todo/templates/index.html
+++ b/todo/templates/index.html
@@ -22,12 +22,15 @@
                     <td
                         class='card'
                         id='task_{{task.id}}'
+                        style="{% if task.status == 1 %}background-color:#FFFF00;{% else %}background-color:#FF"
                         task_id='{{task.id}}'>{{ task.text }}
+                        <!-- task.statusが1の場合#FFFF00(黄色)、0の場合#FFFFFF(白色)が適用される -->
                         <!-- {{task.id}}や{{task.text}}はtaskリストのidやtextを埋め込んでいる -->
                     </td>
                 </tr>
 {% endfor %}<!-- 16行目とこの行で囲んだ部分でtasksのリストデータ分ループさせて、中のtr要素を複数生成していく -->
             </table>
+            <input type="hidden" name="id" id="id">
         </form>
     </main>
     <!-- 2 -->
@@ -45,6 +48,15 @@
     <!-- keyCodeの13がEnterに該当。 -->
     <!-- Enterを押したらフォームのactionに/newを指定しサブミット。 -->
     <!-- これでEnterを押した時登録できる。 -->
+    <script type="text/javascript" src="/static/js/jquery.longpress.js"></script>
+    <script>
+        $(document).ready(function(){
+            $('#new_text').keydown(function(e)) {
+                if (e.keyCode == 13) {
+                    $('form[name="f"]').attr('action', '/new')
+                }
+            }
+        })
 </body>
 
 </html>
