--- a/todo/templates/index.html
+++ b/todo/templates/index.html
@@ -22,7 +22,7 @@
                     <td
                         class='card'
                         id='task_{{task.id}}'
-                        style="{% if task.status == 1 %}background-color:#FFFF00;{% else %}background-color:#FF"
+                        style="{% if task.status == 1 %}background-color:#FFFF00;{% else %}background-color:#FFFFFF;{% endif %}"
                         task_id='{{task.id}}'>{{ task.text }}
                         <!-- task.statusが1の場合#FFFF00(黄色)、0の場合#FFFFFF(白色)が適用される -->
                         <!-- {{task.id}}や{{task.text}}はtaskリストのidやtextを埋め込んでいる -->
@@ -51,12 +51,22 @@
     <script type="text/javascript" src="/static/js/jquery.longpress.js"></script>
     <script>
         $(document).ready(function(){
-            $('#new_text').keydown(function(e)) {
+            $('#new_text').keydown(function(e) {
                 if (e.keyCode == 13) {
                     $('form[name="f"]').attr('action', '/new')
+                    $('from[name="f"]').submit();
                 }
-            }
-        })
+            });
+            $('.card').longpress(function() {
+                var id = $(this).attr("task_id");
+                $('#id').val(id);
+                $('form[name="f"]').attr('action', '/completion');
+                $('form[name="f"]').submit();
+            },
+                1000
+            );
+        });
+    </script>
 </body>
 
 </html>
