--- a/todo/templates/index.html
+++ b/todo/templates/index.html
@@ -88,7 +88,7 @@
 
     <!-- 更新処理 --><!-- chatGPTより間違いあり修正中 -->
     <script>
-        $('button[name="btn_update"]').click(function() {
+        $('button[nae="btn_update"]').click(function() {
             var id = $(this).val();
             if ($('#update_txt_' + id).is(':visible')) {
                 $('#update_txt' + id).hide();
@@ -100,6 +100,7 @@
                 $(this).text('戻す');
             }
         });
+
 
     
         $('input[name="update_txt"]').keydown(function(e) {
